--- a/app/www/index.html
+++ b/app/www/index.html
@@ -7,6 +7,8 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <!--avoid fake favicon requests -->
+    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -14,14 +16,18 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers/SearchController.js"></script>
+    <script src="js/controllers/SearchDetailsController.js"></script>        
     <script src="js/factory/SearchFactory.js"></script>
-
+    <script src="js/factory/GeoLocationFactory.js"></script>
+    <script src="js/factory/ErrorHttpInterceptor.js"></script>
   </head>
   <body ng-app="foursquareSearch">
     <!--
@@ -33,10 +39,16 @@
     </ion-nav-bar>
     <!--
       The views will be rendered in the <ion-nav-view> directive below
-      Templates are in the /templates folder (but you could also
-      have templates inline in this html file if you'd like).
+      Templates are in the /templates folder.
     -->
     <ion-nav-view></ion-nav-view>
     <script src="lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdn.ravenjs.com/3.3.0/raven.min.js"></script>
+
+    <!-- 
+      Note to self: To be used for creating the search location list that i havent implemented yet..
+
+     -->
+    <!-- <script src="//maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script> -->
   </body>
 </html>
