adding ng-cloack and fixing loading

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -29,7 +29,7 @@
     <script src="js/factory/GeoLocationFactory.js"></script>
     <script src="js/factory/ErrorHttpInterceptor.js"></script>
   </head>
-  <body ng-app="foursquareSearch">
+  <body ng-app="foursquareSearch" ng-cloak>
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
